# Labs

./: ..save  README.md
Laba1 sem2/task1/: lab1.pro  locomotive.cpp  smoke.cpp  smoke.h
Sem1/Fundamentals-of-algorithmization-and-programming 1/laba2/: CMakeLists.txt  task 11.cpp  task10.cpp  task14.cpp  task4.cpp  task42.cpp  task5.cpp  task7.cpp  task8.cpp  task82.cpp  task83.cpp  task9.cpp
Sem1/Fundamentals-of-algorithmization-and-programming 1/laba4/: task10.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task7.cpp
Sem1/Fundamentals-of-algorithmization-and-programming 1/laba5 /: CMakeLists.txt  dyn_lib1.cpp  dynlib2.h  staticlib1.cpp  staticlib1.h  task1.cpp  task3.cpp  task4.cpp  task5.cpp
Sem1/Fundamentals-of-algorithmization-and-programming 1/laba6/: CMakeLists.txt  light_task1.cpp  light_task2.cpp  light_task3.cpp
Sem1/Fundamentals-of-algorithmization-and-programming 1/laba7 /: CMakeLists.txt  library_struct.cpp  library_task1.cpp  light_task1.cpp  light_task2.cpp  task1.cpp
Sem1/Fundamentals-of-algorithmization-and-programming 1/laba8/: task1.cpp  task3.cpp
Sem2/Fundamentals-of-algorithmization-and-programming 2/Laba1 /task1/: locomotive.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moving_rect.cpp  moving_rect.h
Sem2/Fundamentals-of-algorithmization-and-programming 2/Laba1 /task2/: mainwindow.cpp
Sem2/Fundamentals-of-algorithmization-and-programming 2/Laba2 /build-task2-Qt_6_6_1_for_macOS-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
Sem2/Fundamentals-of-algorithmization-and-programming 2/Laba3/task3/: mainwindow.cpp
Sem2/Fundamentals-of-algorithmization-and-programming 2/Laba3/task4/: mainwindow.cpp  towers.cpp
Sem2/Fundamentals-of-algorithmization-and-programming 2/Laba3/task5/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Sem2/Fundamentals-of-algorithmization-and-programming 2/Laba4/build-task1-Qt_6_6_1_for_macOS-Debug/: Makefile  moc_mainwindow.cpp  moc_sorter.cpp  ui_mainwindow.h
Sem2/Fundamentals-of-algorithmization-and-programming 2/Laba4/task4/: CMakeLists.txt  Iterator.h
Sem2/Fundamentals-of-algorithmization-and-programming 2/Laba4/task5/: iterator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  task5.pro  (+1 more)
Sem2/Programming(C#)/Laba2 /: Laba2.sln
Sem2/Programming(C#)/Laba3/: Laba3.sln
Sem2/Programming(C#)/Laba4/: laba4.sln
Sem2/Programming(C#)/Laba5/: Laba5 prog.sln
Sem2/Programming(C#)/Laba6/: Car.cs  CargoTruck.cs  PassengerCar.cs  Program.cs
Sem2/Programming(C#)/Laba7/: Laba7_prog.sln
Sem2/Programming(C#)/Laba8/: Laba8 prog.sln
Sem2/Programming(C#)/Laba9/: Laba9_prog.sln
laba4/: CMakeLists.txt  task6.cpp
laba5 /: task2.cpp
laba7 /: library_struct.h  library_task1.h  library_task2.cpp  library_task2.h
laba8/: CMakeLists.txt  task2.cpp
(+433 files in other folders)
