cmake_minimum_required(VERSION 3.26)
project(untitled4)

set(CMAKE_CXX_STANDARD 17)

add_executable(task1 task1.cpp)
add_executable(laba2
task2.cpp)
add_executable(laba3
task3.cpp)
add_executable(laba4
task4.cpp)
add_executable(laba5
        task5.cpp)
add_executable(laba6
        task6.cpp)
add_executable(laba7
        task7.cpp)
add_executable(task9
        task9.cpp)
add_executable(task10
        task10.cpp)
add_executable(task13
        task13.cpp)