cmake_minimum_required(VERSION 3.26)
project(untitled2)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled2 main.cpp)
add_executable(laba10 "task10.cpp"
)

add_executable(laba11  "task 11.cpp")
add_executable(laba7 "task7.cpp")
add_executable(laba5 task5.cpp)
add_executable(laba8  task8.cpp)
add_executable(laba82
        task82.cpp)
add_executable(laba83
        task83.cpp)
add_executable(laba4
        task4.cpp)
add_executable(laba42  task42.cpp)
add_executable(laba9
        task9.cpp)
add_executable(laba14 "task14.cpp")
